# OrganicCord

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.husky/: pre-push
.local-ai/: ai.rs  aiStore.ts
.local-ai/ai/: orchestrator.ts  store.ts  types.ts
.local-ai/components/ai/: AiConfigModal.tsx  AiConversationModal.tsx  AiConversationPanel.tsx  ChatAiButtons.tsx  DmAiFeature.tsx
.local-ai/stores/: aiConversationStore.ts  aiStore.ts
.local-ai/stores/ai/: store.ts  types.ts
.local-ai/tauri/: ai.rs
scripts/: ai-manager.js  disable-ai.js  enable-ai.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bin_test_rsa.rs  http_client.rs  lib.rs  main.rs
src-tauri/src/commands/: account.rs  ai.rs  audio.rs  auth_webview.rs  discord.rs  mod.rs  presence.rs  qr_login.rs  session.rs  voice.rs  window.rs
src-tauri/src/gateway/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/ai/: AiConfigModal.tsx  AiConversationModal.tsx  AiConversationPanel.tsx  ChatAiButtons.tsx
src/components/auth/: AddAccountModal.tsx  QrLoginStep.tsx
src/components/chat/: ActiveCallArea.tsx  ChatArea.tsx  DMArea.tsx  DiscordEmojiPicker.tsx  EmbedRenderer.tsx  ForumArea.tsx  MessageComponentsRenderer.tsx  MessageContent.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  PinnedMessagesPopover.tsx  PollRenderer.tsx  SearchResultsSidebar.tsx  TypingIndicator.tsx  WelcomePlaceholder.tsx
src/lib/: tauri.ts  utils.ts
src/stores/: accountStore.ts  aiConversationStore.ts  aiStore.ts  archiveStore.ts  discordStore.ts  navigationStore.ts  profileStore.ts  voiceStore.ts
src/styles/: globals.css
src/types/: index.ts
(+29 files in other folders)
