[package]
name = "organic-cord"
version = "0.1.0"
description = "OrganicCord - Multi-account Discord client"
authors = ["OrganicCord"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "organic_cord_lib"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "organic-cord"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
keyring = { version = "3", features = ["windows-native"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
once_cell = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
sha2 = "0.10"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rsa = { version = "0.9", features = ["sha2"] }
spki = "0.7"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri-plugin-dialog = "2.7.1"
async-stream = "0.3.6"
bytes = "1.12.0"
davey = "0.1.3"
openmls = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.2.0"
cpal = "0.17.1"
audiopus = "0.2.0"
rubato = "1.0.1"
urlencoding = "2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
